--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -1,34 +1,32 @@
 [docks]
 
-dock_1_selected_tab_idx=0
-dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
 dock_5_selected_tab_idx=0
-dock_6_selected_tab_idx=0
-dock_7_selected_tab_idx=0
-dock_8_selected_tab_idx=0
 dock_floating={}
+dock_bottom=[]
+dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-335
+dock_hsplit_3=-216
 dock_hsplit_4=0
-dock_filesystem_split=0
+dock_filesystem_h_split_offset=240
+dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_selected_paths=PackedStringArray("res://scripts/borders.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn")
-current_scene="res://main.tscn"
+open_scenes=PackedStringArray("res://scenes/cell.tscn", "res://scenes/tabuleiro.tscn", "res://scenes/tabuleiro_maior.tscn", "res://scenes/main_game.tscn", "res://scenes/info_panel.tscn", "res://scenes/game_over_menu.tscn", "res://scenes/regras.tscn", "res://scenes/main.tscn", "res://scenes/new_game_menu.tscn")
+current_scene="res://scenes/main.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -36,24 +34,26 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://board.gd", "res://game_over_menu.gd", "res://main.gd"]
-selected_script="res://main.gd"
+open_scripts=["res://scripts/borders.gd", "res://scripts/cell.gd", "res://scripts/condicoes_vitoria.gd", "res://scripts/game_over_menu.gd", "res://scripts/ia.gd", "res://scripts/info_panel.gd", "res://scripts/main.gd", "res://scripts/main_game.gd", "res://scripts/new_game_menu.gd", "res://scripts/regras.gd", "res://scripts/tabuleiro.gd", "res://scripts/tabuleiro_maior.gd"]
+selected_script="res://scripts/main.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
+zoom_factor=1.0
 
 [ShaderEditor]
 
 open_shaders=[]
 split_offset=0
 selected_shader=""
+text_shader_zoom_factor=1.0
 
 [editor_log]
 
 log_filter_0=true
 log_filter_2=true
 log_filter_1=true
-log_filter_3=false
-log_filter_4=false
+log_filter_3=true
+log_filter_4=true
 collapse=false
 show_search=true
