--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -1,41 +1,175 @@
-[res://main.gd]
+[res://scripts/borders.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 38,
-"folded_lines": Array[int]([98, 141, 144, 148]),
-"h_scroll_position": 0,
-"row": 84,
-"scroll_position": 85.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://board.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 28,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 19,
+"row": 8,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://game_over_menu.gd]
+[res://scripts/cell.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 14,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 2,
+"row": 20,
 "scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/tabuleiro_maior.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 16,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 23,
+"scroll_position": 8.0,
+"selection": true,
+"selection_from_column": 15,
+"selection_from_line": 23,
+"selection_to_column": 16,
+"selection_to_line": 23,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/tabuleiro.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 12,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 25,
+"scroll_position": 25.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/condicoes_vitoria.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 36,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 113,
+"scroll_position": 81.0,
+"selection": true,
+"selection_from_column": 22,
+"selection_from_line": 113,
+"selection_to_column": 36,
+"selection_to_line": 113,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/main_game.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 42,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 59,
+"scroll_position": 42.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/info_panel.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 26,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 57,
+"scroll_position": 34.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/game_over_menu.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/regras.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 5,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/main.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 10,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/ia.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(33),
+"column": 44,
+"folded_lines": Array[int]([71, 75, 80, 86]),
+"h_scroll_position": 0,
+"row": 58,
+"scroll_position": 28.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/new_game_menu.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 24,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 90,
+"scroll_position": 74.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
