--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,1 +1,13 @@
-list=Array[Dictionary]([])
+list=Array[Dictionary]([{
+"base": &"Node",
+"class": &"IA",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/ia.gd"
+}, {
+"base": &"Node",
+"class": &"WinConditions",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/condicoes_vitoria.gd"
+}])
