--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -3,27 +3,27 @@
 name="Windows Desktop"
 platform="Windows Desktop"
 runnable=true
+advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../Jogos Completos/JogoDaVelha2.exe"
+export_path="../Jogos Completos/Jogo da Velha 2.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
 encrypt_directory=false
+script_export_mode=2
 
 [preset.0.options]
 
 custom_template/debug=""
 custom_template/release=""
-debug/export_console_wrapper=1
-binary_format/embed_pck=false
-texture_format/bptc=true
-texture_format/s3tc=true
-texture_format/etc=false
-texture_format/etc2=false
+debug/export_console_wrapper=0
+binary_format/embed_pck=true
+texture_format/s3tc_bptc=true
+texture_format/etc2_astc=false
 binary_format/architecture="x86_64"
 codesign/enable=false
 codesign/timestamp=true
@@ -31,8 +31,8 @@ codesign/timestamp_server_url=""
 codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PackedStringArray()
-application/modify_resources=false
-application/icon=""
+application/modify_resources=true
+application/icon="res://icon.svg"
 application/console_wrapper_icon=""
 application/icon_interpolation=4
 application/file_version=""
@@ -43,6 +43,8 @@ application/file_description=""
 application/copyright=""
 application/trademarks=""
 application/export_angle=0
+application/export_d3d12=0
+application/d3d12_agility_sdk_multiarch=true
 ssh_remote_deploy/enabled=false
 ssh_remote_deploy/host="user@host_ip"
 ssh_remote_deploy/port="22"
