Apagando coisas inuteis

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,13 +1,25 @@
-list=Array[Dictionary]([{
+list=[{
+"base": &"Control",
+"class": &"Celula",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scripts/tabuleiro/celula.gd"
+}, {
 "base": &"Node",
 "class": &"IA",
 "icon": "",
+"is_abstract": false,
+"is_tool": false,
 "language": &"GDScript",
-"path": "res://scripts/ia.gd"
+"path": "res://scripts/global/ia.gd"
 }, {
 "base": &"Node",
 "class": &"WinConditions",
 "icon": "",
+"is_abstract": false,
+"is_tool": false,
 "language": &"GDScript",
-"path": "res://scripts/condicoes_vitoria.gd"
-}])
+"path": "res://scripts/global/condicoes_vitoria.gd"
+}]
