--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,31 +2,34 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
-dock_split_2=0
+dock_split_2=22
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-216
+dock_hsplit_3=-255
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scripts/borders.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/main_game.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/")
+dock_node_current_tab=0
+dock_history_include_scene=true
+dock_history_include_global=true
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/cell.tscn", "res://scenes/tabuleiro.tscn", "res://scenes/tabuleiro_maior.tscn", "res://scenes/main_game.tscn", "res://scenes/info_panel.tscn", "res://scenes/game_over_menu.tscn", "res://scenes/regras.tscn", "res://scenes/main.tscn", "res://scenes/new_game_menu.tscn")
-current_scene="res://scenes/main.tscn"
+open_scenes=PackedStringArray("res://scenes/main.tscn", "res://scenes/main_game.tscn", "res://scenes/menus/info_panel.tscn", "res://scenes/menus/new_game_menu.tscn")
+current_scene="res://scenes/main_game.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -34,10 +37,10 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/borders.gd", "res://scripts/cell.gd", "res://scripts/condicoes_vitoria.gd", "res://scripts/game_over_menu.gd", "res://scripts/ia.gd", "res://scripts/info_panel.gd", "res://scripts/main.gd", "res://scripts/main_game.gd", "res://scripts/new_game_menu.gd", "res://scripts/regras.gd", "res://scripts/tabuleiro.gd", "res://scripts/tabuleiro_maior.gd"]
-selected_script="res://scripts/main.gd"
+open_scripts=["res://scripts/tabuleiro/borders.gd", "res://scripts/tabuleiro/cell.gd", "res://scripts/global/condicoes_vitoria.gd", "res://scripts/menus/game_over_menu.gd", "res://scripts/global/ia.gd", "res://scripts/menus/info_panel.gd", "res://scripts/menus/initial_menu.gd", "res://scripts/main.gd", "res://scripts/main_game.gd", "res://scripts/menus/new_game_menu.gd", "res://scripts/tabuleiro/tabuleiro.gd", "res://scripts/tabuleiro/tabuleiro_maior.gd"]
+selected_script="res://scripts/main_game.gd"
 open_help=[]
-script_split_offset=70
+script_split_offset=215
 list_split_offset=0
 zoom_factor=1.0
 
@@ -57,3 +60,14 @@ log_filter_3=true
 log_filter_4=true
 collapse=false
 show_search=true
+
+[EditorWindow]
+
+screen=0
+mode="maximized"
+position=Vector2i(0, 23)
+
+[GameView]
+
+floating_window_rect=Rect2i(0, 0, 0, 0)
+floating_window_screen=-1
