--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -1,18 +1,32 @@
-[res://scripts/borders.gd]
+[res://scripts/main_game.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 27,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
+"row": 35,
+"scroll_position": 18.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/main.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 41,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 11,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://scripts/cell.gd]
+[res://scripts/menus/initial_menu.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -26,85 +40,49 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://scripts/tabuleiro_maior.gd]
+[res://export_presets.cfg]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 16,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 23,
-"scroll_position": 8.0,
-"selection": true,
-"selection_from_column": 15,
-"selection_from_line": 23,
-"selection_to_column": 16,
-"selection_to_line": 23,
-"syntax_highlighter": "GDScript"
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "Texto Simples"
 }
 
-[res://scripts/tabuleiro.gd]
+[res://scripts/global/condicoes_vitoria.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 12,
+"column": 21,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 25,
-"scroll_position": 25.0,
+"row": 20,
+"scroll_position": 94.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://scripts/condicoes_vitoria.gd]
+[res://scripts/global/ia.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 36,
-"folded_lines": Array[int]([]),
+"column": 13,
+"folded_lines": Array[int]([71, 75, 80, 86]),
 "h_scroll_position": 0,
-"row": 113,
-"scroll_position": 81.0,
-"selection": true,
-"selection_from_column": 22,
-"selection_from_line": 113,
-"selection_to_column": 36,
-"selection_to_line": 113,
-"syntax_highlighter": "GDScript"
-}
-
-[res://scripts/main_game.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 42,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 59,
-"scroll_position": 42.0,
+"row": 1,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://scripts/info_panel.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 26,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 57,
-"scroll_position": 34.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://scripts/game_over_menu.gd]
+[res://scripts/tabuleiro/cell.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -118,7 +96,21 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://scripts/regras.gd]
+[res://scripts/tabuleiro/borders.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 26,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 12,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/menus/new_game_menu.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -126,41 +118,13 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
-"scroll_position": 0.0,
+"row": 94,
+"scroll_position": 71.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://scripts/main.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 10,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://scripts/ia.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(33),
-"column": 44,
-"folded_lines": Array[int]([71, 75, 80, 86]),
-"h_scroll_position": 0,
-"row": 58,
-"scroll_position": 28.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://scripts/new_game_menu.gd]
+[res://scripts/tabuleiro/tabuleiro.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -168,8 +132,50 @@ state={
 "column": 24,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 90,
-"scroll_position": 74.0,
+"row": 22,
+"scroll_position": 69.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/tabuleiro/tabuleiro_maior.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 21,
+"scroll_position": 9.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/menus/game_over_menu.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/menus/info_panel.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 26,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 57,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
