--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/main_game.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/menus/game_over_menu.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://scenes/menus/", "res://scenes/markers/", "res://assets/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,17 +28,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/main.tscn", "res://scenes/main_game.tscn", "res://scenes/menus/info_panel.tscn", "res://scenes/menus/new_game_menu.tscn")
-current_scene="res://scenes/main_game.tscn"
-center_split_offset=-252
-selected_default_debugger_tab_idx=0
+open_scenes=PackedStringArray("res://scenes/main.tscn", "res://scenes/main_game.tscn", "res://scenes/menus/info_panel.tscn", "res://scenes/menus/new_game_menu.tscn", "res://scenes/menus/regras.tscn", "res://scenes/menus/game_over_menu.tscn")
+current_scene="res://scenes/menus/info_panel.tscn"
+center_split_offset=-329
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/tabuleiro/borders.gd", "res://scripts/tabuleiro/cell.gd", "res://scripts/global/condicoes_vitoria.gd", "res://scripts/menus/game_over_menu.gd", "res://scripts/global/ia.gd", "res://scripts/menus/info_panel.gd", "res://scripts/menus/initial_menu.gd", "res://scripts/main.gd", "res://scripts/main_game.gd", "res://scripts/menus/new_game_menu.gd", "res://scripts/tabuleiro/tabuleiro.gd", "res://scripts/tabuleiro/tabuleiro_maior.gd"]
-selected_script="res://scripts/main_game.gd"
+open_scripts=["res://scripts/tabuleiro/borders.gd", "res://scripts/tabuleiro/cell.gd", "res://scripts/global/condicoes_vitoria.gd", "res://scripts/menus/game_over_menu.gd", "res://scripts/global/ia.gd", "res://scripts/menus/info_panel.gd", "res://scripts/menus/initial_menu.gd", "res://scripts/main.gd", "res://scripts/main_game.gd", "res://scripts/menus/new_game_menu.gd", "res://scripts/menus/partida_ia_ia_menu.gd", "res://scripts/menus/partida_ia_menu.gd", "res://scripts/menus/partida_local_menu.gd", "res://scripts/menus/regras.gd", "res://scripts/tabuleiro/tabuleiro.gd", "res://scripts/tabuleiro/tabuleiro_maior.gd"]
+selected_script="res://scripts/menus/info_panel.gd"
 open_help=[]
 script_split_offset=215
 list_split_offset=0
@@ -69,5 +69,5 @@ position=Vector2i(0, 23)
 
 [GameView]
 
-floating_window_rect=Rect2i(0, 0, 0, 0)
-floating_window_screen=-1
+floating_window_rect=Rect2i(594, 0, 732, 1127)
+floating_window_screen=0
