Adição das bandeiras na opção de lingua

--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -39,7 +39,7 @@ run_instances_config=Array[Dictionary]([{
 [export_options]
 
 default_filename="index"
-export_debug=true
+export_debug=false
 
 [uid_upgrade_tool]
 
@@ -52,4 +52,4 @@ embed_size_mode=2
 
 [quick_open_dialog]
 
-last_mode=1
+last_mode=0
